# rusbmux

./: Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: release.yml
launchctl/: com.abdullah-albanna.rusbmux.plist
src/: daemon.rs  device.rs  device_watcher.rs  lib.rs  main.rs  packet_router.rs  usb.rs  utils.rs  watcher.rs
src/conn/: mod.rs  network.rs  usb.rs
src/device/: conn.rs  core.rs  mod.rs  network.rs  packet_router.rs  usb.rs
src/error/: mod.rs
src/handler/: connect.rs  delete_pair_record.rs  device_list.rs  device_watcher.rs  listen.rs  listeners_list.rs  mod.rs  read_buid.rs  read_pair_record.rs  save_pair_record.rs
src/parser/: device_mux.rs  device_mux_builder.rs  mod.rs  usbmux.rs
src/parser/device_mux/: builder.rs  mod.rs
src/types/: message_types.rs  mod.rs  mux_header.rs  usbmux_header.rs
src/usb_backend/: mod.rs  nusb.rs  rusb.rs
src/watcher/: mod.rs  network.rs  usb.rs
windows/: rusbmux-setup.iss
