[package]
name = "rusbmux"
version = "0.1.0"
edition = "2024"
authors = ["Abdullah Al-Banna"]
description = "A drop-in usbmuxd replacement in Rust that works without a system daemon."
documentation = "https://docs.rs/rusbmux"
homepage = "https://github.com/abdullah-albanna/rusbmux"
license = "MIT"
keywords = ["apple", "usb", "usbmuxd"]

[dependencies]
plist-macro = "0.1"
plist = "1.8"

bytemuck = "1"

nusb = { version = "0.2", features = ["tokio"] }

tokio = { version = "1", features = ["full"] }
futures-lite = "2"

nix = { version = "0.31", features = ["socket"] }
pack1 = { version = "1.0.0", features = ["bytemuck"] }
etherparse = "0.19.0"
