[package]
name = "rusbmux"
version = "0.1.0"
edition = "2024"
authors = ["Abdullah Al-Banna"]
description = "A drop-in usbmuxd replacement in Rust that works without a system daemon."
documentation = "https://docs.rs/rusbmux"
homepage = "https://github.com/abdullah-albanna/rusbmux"
license = "MIT"
keywords = ["apple", "usb", "usbmuxd"]

[dependencies]
plist-macro = "0.1"
plist = "1.8"

bytemuck = "1"

nusb = { version = "0.2", features = ["tokio"] }

tokio = { version = "1", features = ["io-util", "fs", "sync"] }
futures-lite = { version = "2", default-features = false }

[target.'cfg(target_family = "unix")'.dependencies]
nix = { version = "0.31", features = ["socket"], optional = true }

pack1 = { version = "1.0.0", features = ["bytemuck"] }
etherparse = "0.19"

[features]
default = []
bin = ["dep:nix", "tokio/net", "tokio/macros", "tokio/rt-multi-thread"]

[[bin]]
name = "rusbmux"
required-features = ["bin"]
