[package]
name = "rusbmux"
version = "0.1.0"
edition = "2024"
authors = ["Abdullah Al-Banna"]
description = "A drop-in usbmuxd replacement in Rust that works without a system daemon."
documentation = "https://docs.rs/rusbmux"
repository = "https://github.com/abdullah-albanna/rusbmux"
homepage = "https://github.com/abdullah-albanna/rusbmux"
license = "MIT OR Apache-2.0"
categories = ["network-programming"]
keywords = ["apple", "usb", "usbmuxd", "multiplexing", "ios"]

[dependencies]
plist-macro = "0.1"
plist = "1.8"

bytemuck = "1"

nusb = { version = "0.2", features = ["tokio"] }

tokio = { version = "1", features = ["io-util", "fs", "sync"] }
futures-lite = { version = "2", default-features = false }
bytes = "1"

[target.'cfg(target_family = "unix")'.dependencies]
rustix = { version = "1.1.4", features = ["net"], optional = true }

pack1 = "1.0.0"
bitflags = "2"
etherparse = "0.19"

[features]
default = []
bin = ["dep:rustix", "tokio/net", "tokio/macros", "tokio/rt-multi-thread"]

[[bin]]
name = "rusbmux"
required-features = ["bin"]
